Working on create project

--- a/create-project-details.html
+++ b/create-project-details.html
@@ -113,43 +113,168 @@
                         <form action="">
                             <h6 class="text-muted">Choose a name for your contest*</h6>
                             <input class="form-control py-3" type="text" placeholder="Title of your contest" aria-label="default input example">
-                        </form>
+
                     </div>
 
                     <div class="profile-top-sec shadow-cust mt-4 p-4">
                         <h3>Project Brief</h3>
                         <hr class="my-4">
-                        <form action="">
-                            <h6 class="text-muted">Project Description*</h6>
-                            <!-- <textarea id="summernote"></textarea> -->
-                        </form>
+
+                        <h6 class="text-muted">Project Description*</h6>
+                        <!-- <textarea id="summernote"></textarea> -->
+
                     </div>
 
 
                     <div class="profile-top-sec shadow-cust mt-4 p-4">
                         <h3>Skills Required</h3>
                         <hr class="my-4">
-                        <form action="">
 
 
-                            <div class="mt-2 main-services">
-                                <h6 class="text-muted">Main Services*</h6>
+
+                        <div class="mt-2 main-services">
+                            <h6 class="text-muted">Main Services*</h6>
 
 
-                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off">Design & Creative</button>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Programming & Tech</button>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Writing & Translation</button>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">3D & Animation</button>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Music & Video</button>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Sales & Marketing</button>
-                                <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Lifestyle & Photography</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off">Design & Creative</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Programming & Tech</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Writing & Translation</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">3D & Animation</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Music & Video</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Sales & Marketing</button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Lifestyle & Photography</button>
 
+                        </div>
+
+                        <hr class="my-4">
+
+                        <h6 class="text-muted">Add Total 5 Required Skills minimum 3.</h6>
+                        <input class="form-control py-3" type="text" placeholder="i.e . Type skill name..." aria-label="default input example">
+                        <div class="top-skill mt-3">
+                            <span class="badge">HTML <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                            <span class="badge">GRAPHIC DESIGN <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                            <span class="badge">ILLUSTRATOR <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                            <span class="badge">USER EXPERIENCE <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                        </div>
+
+
+                    </div>
+
+
+                    <div class="profile-top-sec shadow-cust mt-4 p-4">
+                        <h3>Attachments</h3>
+                        <hr class="my-4">
+
+                        <h6 class="text-muted">Do you have any images, sketches or documents that might be helpful?*</h6>
+                        <div class="upload-project-file clearfix p-4">
+                            <h6 class="text-muted float-start">Drag & Drop a file or Upload file</h6>
+                            <button class="btn btn-lg btn-primary float-end primary-color shadow" type="file">Upload <i class="fas fa-arrow-up ms-2"></i></button>
+
+                        </div>
+
+                        <hr class="my-4">
+                        <div class="row">
+                            <div class="uploaded-image-preview">
+                                <div class="uploaded-image-only border-bottom-0 position-relative" style="background-image: url(assets/img/upload-image-prev.jpg);">
+                                    <a href="">
+                                        <h6> <i class="fas fa-times mx-1"></i></h6>
+                                    </a>
+                                </div>
+                                <div class="uploaded-image-desc border-top-0 p-3">
+                                    <h5 class="mb-0">Hatchio Example...</h5>
+                                    <p class="text-muted mb-0">30 min ago</p>
+                                </div>
+                            </div>
+                            <div class="uploaded-image-preview">
+                                <div class="uploaded-image-only border-bottom-0 position-relative" style="background-image: url(assets/img/doc-preview.jpg);">
+                                    <a href="">
+                                        <h6> <i class="fas fa-times mx-1"></i></h6>
+                                    </a>
+                                </div>
+                                <div class="uploaded-image-desc border-top-0 p-3">
+                                    <h5 class="mb-0">Hatchio Brief Do...</h5>
+                                    <p class="text-muted mb-0">30 min ago</p>
+                                </div>
+                            </div>
+                            <div class="uploaded-image-preview">
+                                <div class="uploaded-image-only border-bottom-0 position-relative" style="background-image: url(assets/img/pdf-preview.jpg);">
+                                    <a href="">
+                                        <h6> <i class="fas fa-times mx-1"></i></h6>
+                                    </a>
+                                </div>
+                                <div class="uploaded-image-desc border-top-0 p-3">
+                                    <h5 class="mb-0">Hatchio Brief Do...</h5>
+                                    <p class="text-muted mb-0">30 min ago</p>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+
+
+                    <div class="profile-top-sec shadow-cust mt-4 p-4">
+                        <h3>Deliverables</h3>
+                        <hr class="my-4">
+
+                        <h6 class="text-muted">Do you have any particular format for delivarables files. If yes please select.*</h6>
+
+                        <div class="row requirements-boxes mt-3">
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-1">
+                                <div class="deliverable-requirements">
+                                    <h6 class="mx-auto mb-0">dfgdg</h6>
+                                </div>
                             </div>
 
-                            <hr class="my-4">
+                        </div>
+                        <hr class="my-4">
 
-                            <h6 class="text-muted">Add Total 5 Required Skills minimum 3.</h6>
-                            <input id="ms1" style="width:400px;" type="text" name="ms1" />
+                        <h6 class="text-muted">Request other formats</h6>
+                        <input class="form-control py-3" type="text" placeholder="i.e . Frama" aria-label="default input example">
+                        <div class="top-skill mt-3">
+                            <span class="badge">HTML <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                            <span class="badge">GRAPHIC DESIGN <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                            <span class="badge">ILLUSTRATOR <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                            <span class="badge">USER EXPERIENCE <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
+                        </div>
+
                         </form>
                     </div>
 
