Working on Create project details

--- a/create-project-details.html
+++ b/create-project-details.html
@@ -275,7 +275,28 @@
                             <span class="badge">USER EXPERIENCE <a href=""> <i class="fas fa-times text-muted ms-2"></i></a></span>
                         </div>
 
-                        </form>
+                        
+                    </div>
+
+
+
+
+                    <div class="profile-top-sec shadow-cust mt-4 p-4">
+                        <h3>Pick Project Deadline</h3>
+                        <hr class="my-4">
+                        <h6 class="text-muted">Do you have any particular format for delivarables files. If yes please select.*</h6>
+
+                        <div class="row justify-content-between">
+                            <div class="col-md-4">
+                                <input class="form-control py-3" type="date" placeholder="i.e . Frama" aria-label="default input example">
+                            </div>
+                            <div class="col-md-4 text-end">
+                                <h6 class="text-muted mb-0">Your Project Deadline</h6>
+                                <h1 class="text-blue">4th April 2021</h1>
+                            </div>
+                        </div>
+
+                    </form>
                     </div>
 
 
